Fix letter spacing & remove link weight change on hover

--- a/src/theme/common/typography.pcss
+++ b/src/theme/common/typography.pcss
@@ -45,13 +45,13 @@ h2 {
 	margin-bottom: 0.7em;
 	line-height: 0.8;
 
-	letter-spacing: -0.08em;
+	letter-spacing: -0.04em;
 }
 
 h3 {
 	color: var(----colour-accent-secondary);
-	text-stroke: 0.5px var(----colour-accent-primary);
 	-webkit-text-stroke: 0.5px var(----colour-accent-primary);
+	text-stroke: 0.5px var(----colour-accent-primary);
 	font-family: var(----font-family-display);
 	font-weight: 300;
 
@@ -59,7 +59,7 @@ h3 {
 	margin-bottom: 0.7em;
 	line-height: 0.8;
 
-	letter-spacing: -0.08em;
+	letter-spacing: -0.03em;
 }
 
 h4 {
@@ -73,7 +73,7 @@ h4 {
 	margin-bottom: 0.7em;
 	line-height: 0.8;
 
-	letter-spacing: -0.08em;
+	letter-spacing: -0.03em;
 }
 
 h5 {
@@ -127,6 +127,7 @@ a:any-link {
 
 	/* text-shadow: 0 0 0 var(----colour-accent-primary); */
 
+	filter: brightness(1);
 	transition: filter 0.2s var(----ease-fast-slow),
 		text-shadow 0.2s var(----ease-fast-slow),
 		color 0.2s var(----ease-fast-slow),
@@ -135,9 +136,10 @@ a:any-link {
 	&:hover {
 		/* text-shadow: 0 0.5em 0.5em var(----colour-accent-primary); */
 
-		font-weight: 900;
-		letter-spacing: -0.035em;
+		/* font-weight: 900;
+		letter-spacing: -0.035em; */
 
+		filter: brightness(1.2);
 		text-underline-offset: 0.4em;
 	}
 
